project/stage/tests/accept/empty_functions/no_params/float_func.ul
float _O_123456789 ( ) { }
