project/stage/tests/reject/bad_statements/bad_assignments/missing_semicolon.ul
float VOID() {
    id = 
    1
}
